tac-generator/src/syn.output
Grammar

    0 $accept: program $end

    1 program: lst_declarations
    2        | %empty

    3 lst_declarations: declaration lst_declarations
    4                 | declaration

    5 declaration: func_declaration
    6            | var_declaration
    7            | error

    8 $@1: %empty

    9 $@2: %empty

   10 func_declaration: unq_declaration $@1 '(' parameters ')' '{' block_commands '}' $@2

   11 $@3: %empty

   12 $@4: %empty

   13 func_calling: ID '(' $@3 calling_parameters $@4 ')'

   14 var_declaration: unq_declaration ';'

   15 unq_declaration: type ID

   16 type: type_lst
   17     | type_number

   18 type_lst: type_number T_LIST

   19 type_number: T_INT
   20            | T_FLOAT

   21 parameters: lst_parameters
   22           | %empty

   23 $@5: %empty

   24 lst_parameters: unq_declaration ',' lst_parameters $@5

   25 $@6: %empty

   26 lst_parameters: unq_declaration $@6

   27 calling_parameters: lst_calling_parameters
   28                   | %empty

   29 lst_calling_parameters: operation ',' lst_calling_parameters
   30                       | operation

   31 block_commands: command block_commands
   32               | command

   33 command: var_declaration
   34        | init_variable
   35        | conditional_stmt
   36        | return_stmt
   37        | iteration
   38        | output
   39        | input

   40 $@7: %empty

   41 command: $@7 '{' block_commands '}'
   42        | operation ';'
   43        | error ';'
   44        | error

   45 init_variable: init_stmt ';'

   46 init_stmt: iden '=' operation

   47 conditional_stmt: IF_STMT '(' operation ')' command
   48                 | IF_STMT '(' operation ')' command ELSE_STMT command

   49 return_stmt: RETURN_STM operation ';'

   50 iteration: FOR_STMT '(' loop_condition ')' command

   51 loop_condition: update_stmt ';' stop_stmt ';' update_stmt

   52 update_stmt: init_stmt
   53            | %empty

   54 stop_stmt: operation
   55          | %empty

   56 output: OUTPUT_WRITE '(' operation ')' ';'
   57       | OUTPUT_WRITELN '(' operation ')' ';'
   58       | OUTPUT_WRITE '(' STRING ')' ';'
   59       | OUTPUT_WRITELN '(' STRING ')' ';'

   60 input: INPUT_READ '(' iden ')' ';'

   61 iden: ID

   62 operation: lst_binary
   63          | operation GREATER operation
   64          | operation GREATER_EQ operation
   65          | operation LESS operation
   66          | operation LESS_EQ operation
   67          | operation EQUAL operation
   68          | operation NOT_EQ operation
   69          | operation AND operation
   70          | operation OR operation

   71 lst_binary: lst_binary FILTER lst_binary
   72           | lst_binary MAP lst_binary
   73           | lst_binary ':' lst_binary
   74           | arith_binary

   75 arith_binary: arith_binary '+' term
   76             | arith_binary '-' term
   77             | term

   78 term: term '*' expression
   79     | term '/' expression
   80     | expression

   81 expression: func_calling
   82           | single_operation
   83           | const
   84           | iden
   85           | '(' operation ')'

   86 const: number
   87      | NIL_CNST

   88 number: NUM_INT
   89       | NUM_FLOAT

   90 single_operation: arith_single
   91                 | lst_single
   92                 | '!' expression

   93 arith_single: '+' expression
   94             | '-' expression

   95 lst_single: '%' expression
   96           | '?' expression


Terminals, with rules where they appear

    $end (0) 0
    '!' <token> (33) 92
    '%' <token> (37) 95
    '(' <token> (40) 10 13 47 48 50 56 57 58 59 60 85
    ')' <token> (41) 10 13 47 48 50 56 57 58 59 60 85
    '*' <token> (42) 78
    '+' <token> (43) 75 93
    ',' <token> (44) 24 29
    '-' <token> (45) 76 94
    '/' <token> (47) 79
    ':' <token> (58) 73
    ';' <token> (59) 14 42 43 45 49 51 56 57 58 59 60
    '=' <token> (61) 46
    '?' <token> (63) 96
    '{' <token> (123) 10 41
    '}' <token> (125) 10 41
    error (256) 7 43 44
    NUM_INT <token> (258) 88
    NUM_FLOAT <token> (259) 89
    STRING <token> (260) 58 59
    NIL_CNST <token> (261) 87
    ID <token> (262) 13 15 61
    RETURN_STM <token> (263) 49
    T_INT <token> (264) 19
    T_FLOAT <token> (265) 20
    T_LIST <token> (266) 18
    IF_STMT <token> (267) 47 48
    ELSE_STMT <token> (268) 48
    FOR_STMT <token> (269) 50
    OUTPUT_WRITE <token> (270) 56 58
    OUTPUT_WRITELN <token> (271) 57 59
    INPUT_READ <token> (272) 60
    AND <token> (273) 69
    OR <token> (274) 70
    GREATER <token> (275) 63
    GREATER_EQ <token> (276) 64
    LESS <token> (277) 65
    LESS_EQ <token> (278) 66
    EQUAL <token> (279) 67
    NOT_EQ <token> (280) 68
    FILTER <token> (281) 71
    MAP <token> (282) 72


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <node> (44)
        on left: 1 2
        on right: 0
    lst_declarations <node> (45)
        on left: 3 4
        on right: 1 3
    declaration <node> (46)
        on left: 5 6 7
        on right: 3 4
    func_declaration <node> (47)
        on left: 10
        on right: 5
    $@1 (48)
        on left: 8
        on right: 10
    $@2 (49)
        on left: 9
        on right: 10
    func_calling <node> (50)
        on left: 13
        on right: 81
    $@3 (51)
        on left: 11
        on right: 13
    $@4 (52)
        on left: 12
        on right: 13
    var_declaration <node> (53)
        on left: 14
        on right: 6 33
    unq_declaration <node> (54)
        on left: 15
        on right: 10 14 24 26
    type <node> (55)
        on left: 16 17
        on right: 15
    type_lst <node> (56)
        on left: 18
        on right: 16
    type_number <node> (57)
        on left: 19 20
        on right: 17 18
    parameters <node> (58)
        on left: 21 22
        on right: 10
    lst_parameters <node> (59)
        on left: 24 26
        on right: 21 24
    $@5 (60)
        on left: 23
        on right: 24
    $@6 (61)
        on left: 25
        on right: 26
    calling_parameters <node> (62)
        on left: 27 28
        on right: 13
    lst_calling_parameters <node> (63)
        on left: 29 30
        on right: 27 29
    block_commands <node> (64)
        on left: 31 32
        on right: 10 31 41
    command <node> (65)
        on left: 33 34 35 36 37 38 39 41 42 43 44
        on right: 31 32 47 48 50
    $@7 (66)
        on left: 40
        on right: 41
    init_variable <node> (67)
        on left: 45
        on right: 34
    init_stmt <node> (68)
        on left: 46
        on right: 45 52
    conditional_stmt <node> (69)
        on left: 47 48
        on right: 35
    return_stmt <node> (70)
        on left: 49
        on right: 36
    iteration <node> (71)
        on left: 50
        on right: 37
    loop_condition <node> (72)
        on left: 51
        on right: 50
    update_stmt <node> (73)
        on left: 52 53
        on right: 51
    stop_stmt <node> (74)
        on left: 54 55
        on right: 51
    output <node> (75)
        on left: 56 57 58 59
        on right: 38
    input <node> (76)
        on left: 60
        on right: 39
    iden <node> (77)
        on left: 61
        on right: 46 60 84
    operation <node> (78)
        on left: 62 63 64 65 66 67 68 69 70
        on right: 29 30 42 46 47 48 49 54 56 57 63 64 65 66 67 68 69 70 85
    lst_binary <node> (79)
        on left: 71 72 73 74
        on right: 62 71 72 73
    arith_binary <node> (80)
        on left: 75 76 77
        on right: 74 75 76
    term <node> (81)
        on left: 78 79 80
        on right: 75 76 77 78 79
    expression <node> (82)
        on left: 81 82 83 84 85
        on right: 78 79 80 92 93 94 95 96
    const <node> (83)
        on left: 86 87
        on right: 83
    number <node> (84)
        on left: 88 89
        on right: 86
    single_operation <node> (85)
        on left: 90 91 92
        on right: 82
    arith_single <node> (86)
        on left: 93 94
        on right: 90
    lst_single <node> (87)
        on left: 95 96
        on right: 91


State 0

    0 $accept: • program $end

    error    shift, and go to state 1
    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    $end  reduce using rule 2 (program)

    program           go to state 4
    lst_declarations  go to state 5
    declaration       go to state 6
    func_declaration  go to state 7
    var_declaration   go to state 8
    unq_declaration   go to state 9
    type              go to state 10
    type_lst          go to state 11
    type_number       go to state 12


State 1

    7 declaration: error •

    $end     reduce using rule 7 (declaration)
    error    reduce using rule 7 (declaration)
    T_INT    reduce using rule 7 (declaration)
    T_FLOAT  reduce using rule 7 (declaration)


State 2

   19 type_number: T_INT •

    ID      reduce using rule 19 (type_number)
    T_LIST  reduce using rule 19 (type_number)


State 3

   20 type_number: T_FLOAT •

    ID      reduce using rule 20 (type_number)
    T_LIST  reduce using rule 20 (type_number)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 13


State 5

    1 program: lst_declarations •

    $end  reduce using rule 1 (program)


State 6

    3 lst_declarations: declaration • lst_declarations
    4                 | declaration •

    error    shift, and go to state 1
    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    $end  reduce using rule 4 (lst_declarations)

    lst_declarations  go to state 14
    declaration       go to state 6
    func_declaration  go to state 7
    var_declaration   go to state 8
    unq_declaration   go to state 9
    type              go to state 10
    type_lst          go to state 11
    type_number       go to state 12


State 7

    5 declaration: func_declaration •

    $end     reduce using rule 5 (declaration)
    error    reduce using rule 5 (declaration)
    T_INT    reduce using rule 5 (declaration)
    T_FLOAT  reduce using rule 5 (declaration)


State 8

    6 declaration: var_declaration •

    $end     reduce using rule 6 (declaration)
    error    reduce using rule 6 (declaration)
    T_INT    reduce using rule 6 (declaration)
    T_FLOAT  reduce using rule 6 (declaration)


State 9

   10 func_declaration: unq_declaration • $@1 '(' parameters ')' '{' block_commands '}' $@2
   14 var_declaration: unq_declaration • ';'

    ';'  shift, and go to state 15

    '('  reduce using rule 8 ($@1)

    $@1  go to state 16


State 10

   15 unq_declaration: type • ID

    ID  shift, and go to state 17


State 11

   16 type: type_lst •

    ID  reduce using rule 16 (type)


State 12

   17 type: type_number •
   18 type_lst: type_number • T_LIST

    T_LIST  shift, and go to state 18

    ID  reduce using rule 17 (type)


State 13

    0 $accept: program $end •

    $default  accept


State 14

    3 lst_declarations: declaration lst_declarations •

    $end  reduce using rule 3 (lst_declarations)


State 15

   14 var_declaration: unq_declaration ';' •

    $end     reduce using rule 14 (var_declaration)
    error    reduce using rule 14 (var_declaration)
    T_INT    reduce using rule 14 (var_declaration)
    T_FLOAT  reduce using rule 14 (var_declaration)


State 16

   10 func_declaration: unq_declaration $@1 • '(' parameters ')' '{' block_commands '}' $@2

    '('  shift, and go to state 19


State 17

   15 unq_declaration: type ID •

    '('  reduce using rule 15 (unq_declaration)
    ';'  reduce using rule 15 (unq_declaration)


State 18

   18 type_lst: type_number T_LIST •

    ID  reduce using rule 18 (type_lst)


State 19

   10 func_declaration: unq_declaration $@1 '(' • parameters ')' '{' block_commands '}' $@2

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    ')'  reduce using rule 22 (parameters)

    unq_declaration  go to state 20
    type             go to state 167
    type_lst         go to state 11
    type_number      go to state 12
    parameters       go to state 21
    lst_parameters   go to state 22


State 20

   24 lst_parameters: unq_declaration • ',' lst_parameters $@5
   26               | unq_declaration • $@6

    ','  shift, and go to state 23

    ')'  reduce using rule 25 ($@6)

    $@6  go to state 24


State 21

   10 func_declaration: unq_declaration $@1 '(' parameters • ')' '{' block_commands '}' $@2

    ')'  shift, and go to state 25


State 22

   21 parameters: lst_parameters •

    ')'  reduce using rule 21 (parameters)


State 23

   24 lst_parameters: unq_declaration ',' • lst_parameters $@5

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    unq_declaration  go to state 20
    type             go to state 167
    type_lst         go to state 11
    type_number      go to state 12
    lst_parameters   go to state 26


State 24

   26 lst_parameters: unq_declaration $@6 •

    ')'  reduce using rule 26 (lst_parameters)


State 25

   10 func_declaration: unq_declaration $@1 '(' parameters ')' • '{' block_commands '}' $@2

    '{'  shift, and go to state 27


State 26

   24 lst_parameters: unq_declaration ',' lst_parameters • $@5

    ')'  reduce using rule 23 ($@5)

    $@5  go to state 28


State 27

   10 func_declaration: unq_declaration $@1 '(' parameters ')' '{' • block_commands '}' $@2

    error           shift, and go to state 29
    NUM_INT         shift, and go to state 30
    NUM_FLOAT       shift, and go to state 31
    NIL_CNST        shift, and go to state 32
    ID              shift, and go to state 33
    RETURN_STM      shift, and go to state 34
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 35
    FOR_STMT        shift, and go to state 36
    OUTPUT_WRITE    shift, and go to state 37
    OUTPUT_WRITELN  shift, and go to state 38
    INPUT_READ      shift, and go to state 39
    '('             shift, and go to state 40
    '+'             shift, and go to state 41
    '-'             shift, and go to state 42
    '%'             shift, and go to state 43
    '?'             shift, and go to state 44
    '!'             shift, and go to state 45

    '{'  reduce using rule 40 ($@7)

    func_calling      go to state 46
    var_declaration   go to state 47
    unq_declaration   go to state 48
    type              go to state 168
    type_lst          go to state 11
    type_number       go to state 12
    block_commands    go to state 49
    command           go to state 50
    $@7               go to state 51
    init_variable     go to state 52
    init_stmt         go to state 53
    conditional_stmt  go to state 54
    return_stmt       go to state 55
    iteration         go to state 56
    output            go to state 57
    input             go to state 58
    iden              go to state 59
    operation         go to state 60
    lst_binary        go to state 61
    arith_binary      go to state 62
    term              go to state 63
    expression        go to state 64
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 28

   24 lst_parameters: unq_declaration ',' lst_parameters $@5 •

    ')'  reduce using rule 24 (lst_parameters)


State 29

   43 command: error • ';'
   44        | error •

    ';'  shift, and go to state 70

    error           reduce using rule 44 (command)
    NUM_INT         reduce using rule 44 (command)
    NUM_FLOAT       reduce using rule 44 (command)
    NIL_CNST        reduce using rule 44 (command)
    ID              reduce using rule 44 (command)
    RETURN_STM      reduce using rule 44 (command)
    T_INT           reduce using rule 44 (command)
    T_FLOAT         reduce using rule 44 (command)
    IF_STMT         reduce using rule 44 (command)
    FOR_STMT        reduce using rule 44 (command)
    OUTPUT_WRITE    reduce using rule 44 (command)
    OUTPUT_WRITELN  reduce using rule 44 (command)
    INPUT_READ      reduce using rule 44 (command)
    '('             reduce using rule 44 (command)
    '{'             reduce using rule 44 (command)
    '}'             reduce using rule 44 (command)
    '+'             reduce using rule 44 (command)
    '-'             reduce using rule 44 (command)
    '%'             reduce using rule 44 (command)
    '?'             reduce using rule 44 (command)
    '!'             reduce using rule 44 (command)


State 30

   88 number: NUM_INT •

    ';'         reduce using rule 88 (number)
    AND         reduce using rule 88 (number)
    OR          reduce using rule 88 (number)
    GREATER     reduce using rule 88 (number)
    GREATER_EQ  reduce using rule 88 (number)
    LESS        reduce using rule 88 (number)
    LESS_EQ     reduce using rule 88 (number)
    EQUAL       reduce using rule 88 (number)
    NOT_EQ      reduce using rule 88 (number)
    '+'         reduce using rule 88 (number)
    '-'         reduce using rule 88 (number)
    '*'         reduce using rule 88 (number)
    '/'         reduce using rule 88 (number)
    FILTER      reduce using rule 88 (number)
    MAP         reduce using rule 88 (number)
    ':'         reduce using rule 88 (number)


State 31

   89 number: NUM_FLOAT •

    ';'         reduce using rule 89 (number)
    AND         reduce using rule 89 (number)
    OR          reduce using rule 89 (number)
    GREATER     reduce using rule 89 (number)
    GREATER_EQ  reduce using rule 89 (number)
    LESS        reduce using rule 89 (number)
    LESS_EQ     reduce using rule 89 (number)
    EQUAL       reduce using rule 89 (number)
    NOT_EQ      reduce using rule 89 (number)
    '+'         reduce using rule 89 (number)
    '-'         reduce using rule 89 (number)
    '*'         reduce using rule 89 (number)
    '/'         reduce using rule 89 (number)
    FILTER      reduce using rule 89 (number)
    MAP         reduce using rule 89 (number)
    ':'         reduce using rule 89 (number)


State 32

   87 const: NIL_CNST •

    ';'         reduce using rule 87 (const)
    AND         reduce using rule 87 (const)
    OR          reduce using rule 87 (const)
    GREATER     reduce using rule 87 (const)
    GREATER_EQ  reduce using rule 87 (const)
    LESS        reduce using rule 87 (const)
    LESS_EQ     reduce using rule 87 (const)
    EQUAL       reduce using rule 87 (const)
    NOT_EQ      reduce using rule 87 (const)
    '+'         reduce using rule 87 (const)
    '-'         reduce using rule 87 (const)
    '*'         reduce using rule 87 (const)
    '/'         reduce using rule 87 (const)
    FILTER      reduce using rule 87 (const)
    MAP         reduce using rule 87 (const)
    ':'         reduce using rule 87 (const)


State 33

   13 func_calling: ID • '(' $@3 calling_parameters $@4 ')'
   61 iden: ID •

    '('  shift, and go to state 71

    ';'         reduce using rule 61 (iden)
    AND         reduce using rule 61 (iden)
    OR          reduce using rule 61 (iden)
    GREATER     reduce using rule 61 (iden)
    GREATER_EQ  reduce using rule 61 (iden)
    LESS        reduce using rule 61 (iden)
    LESS_EQ     reduce using rule 61 (iden)
    EQUAL       reduce using rule 61 (iden)
    NOT_EQ      reduce using rule 61 (iden)
    '+'         reduce using rule 61 (iden)
    '-'         reduce using rule 61 (iden)
    '*'         reduce using rule 61 (iden)
    '/'         reduce using rule 61 (iden)
    FILTER      reduce using rule 61 (iden)
    MAP         reduce using rule 61 (iden)
    ':'         reduce using rule 61 (iden)
    '='         reduce using rule 61 (iden)


State 34

   49 return_stmt: RETURN_STM • operation ';'

    NUM_INT    shift, and go to state 30
    NUM_FLOAT  shift, and go to state 31
    NIL_CNST   shift, and go to state 32
    ID         shift, and go to state 169
    '('        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '%'        shift, and go to state 43
    '?'        shift, and go to state 44
    '!'        shift, and go to state 45

    func_calling      go to state 46
    iden              go to state 72
    operation         go to state 73
    lst_binary        go to state 61
    arith_binary      go to state 62
    term              go to state 63
    expression        go to state 64
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 35

   47 conditional_stmt: IF_STMT • '(' operation ')' command
   48                 | IF_STMT • '(' operation ')' command ELSE_STMT command

    '('  shift, and go to state 74


State 36

   50 iteration: FOR_STMT • '(' loop_condition ')' command

    '('  shift, and go to state 75


State 37

   56 output: OUTPUT_WRITE • '(' operation ')' ';'
   58       | OUTPUT_WRITE • '(' STRING ')' ';'

    '('  shift, and go to state 76


State 38

   57 output: OUTPUT_WRITELN • '(' operation ')' ';'
   59       | OUTPUT_WRITELN • '(' STRING ')' ';'

    '('  shift, and go to state 77


State 39

   60 input: INPUT_READ • '(' iden ')' ';'

    '('  shift, and go to state 78


State 40

   85 expression: '(' • operation ')'

    NUM_INT    shift, and go to state 170
    NUM_FLOAT  shift, and go to state 171
    NIL_CNST   shift, and go to state 172
    ID         shift, and go to state 173
    '('        shift, and go to state 174
    '+'        shift, and go to state 175
    '-'        shift, and go to state 176
    '%'        shift, and go to state 177
    '?'        shift, and go to state 178
    '!'        shift, and go to state 179

    func_calling      go to state 180
    iden              go to state 181
    operation         go to state 79
    lst_binary        go to state 182
    arith_binary      go to state 183
    term              go to state 184
    expression        go to state 185
    const             go to state 186
    number            go to state 187
    single_operation  go to state 188
    arith_single      go to state 189
    lst_single        go to state 190


State 41

   93 arith_single: '+' • expression

    NUM_INT    shift, and go to state 30
    NUM_FLOAT  shift, and go to state 31
    NIL_CNST   shift, and go to state 32
    ID         shift, and go to state 169
    '('        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '%'        shift, and go to state 43
    '?'        shift, and go to state 44
    '!'        shift, and go to state 45

    func_calling      go to state 46
    iden              go to state 72
    expression        go to state 80
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 42

   94 arith_single: '-' • expression

    NUM_INT    shift, and go to state 30
    NUM_FLOAT  shift, and go to state 31
    NIL_CNST   shift, and go to state 32
    ID         shift, and go to state 169
    '('        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '%'        shift, and go to state 43
    '?'        shift, and go to state 44
    '!'        shift, and go to state 45

    func_calling      go to state 46
    iden              go to state 72
    expression        go to state 81
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 43

   95 lst_single: '%' • expression

    NUM_INT    shift, and go to state 30
    NUM_FLOAT  shift, and go to state 31
    NIL_CNST   shift, and go to state 32
    ID         shift, and go to state 169
    '('        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '%'        shift, and go to state 43
    '?'        shift, and go to state 44
    '!'        shift, and go to state 45

    func_calling      go to state 46
    iden              go to state 72
    expression        go to state 82
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 44

   96 lst_single: '?' • expression

    NUM_INT    shift, and go to state 30
    NUM_FLOAT  shift, and go to state 31
    NIL_CNST   shift, and go to state 32
    ID         shift, and go to state 169
    '('        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '%'        shift, and go to state 43
    '?'        shift, and go to state 44
    '!'        shift, and go to state 45

    func_calling      go to state 46
    iden              go to state 72
    expression        go to state 83
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 45

   92 single_operation: '!' • expression

    NUM_INT    shift, and go to state 30
    NUM_FLOAT  shift, and go to state 31
    NIL_CNST   shift, and go to state 32
    ID         shift, and go to state 169
    '('        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '%'        shift, and go to state 43
    '?'        shift, and go to state 44
    '!'        shift, and go to state 45

    func_calling      go to state 46
    iden              go to state 72
    expression        go to state 84
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 46

   81 expression: func_calling •

    ';'         reduce using rule 81 (expression)
    AND         reduce using rule 81 (expression)
    OR          reduce using rule 81 (expression)
    GREATER     reduce using rule 81 (expression)
    GREATER_EQ  reduce using rule 81 (expression)
    LESS        reduce using rule 81 (expression)
    LESS_EQ     reduce using rule 81 (expression)
    EQUAL       reduce using rule 81 (expression)
    NOT_EQ      reduce using rule 81 (expression)
    '+'         reduce using rule 81 (expression)
    '-'         reduce using rule 81 (expression)
    '*'         reduce using rule 81 (expression)
    '/'         reduce using rule 81 (expression)
    FILTER      reduce using rule 81 (expression)
    MAP         reduce using rule 81 (expression)
    ':'         reduce using rule 81 (expression)


State 47

   33 command: var_declaration •

    error           reduce using rule 33 (command)
    NUM_INT         reduce using rule 33 (command)
    NUM_FLOAT       reduce using rule 33 (command)
    NIL_CNST        reduce using rule 33 (command)
    ID              reduce using rule 33 (command)
    RETURN_STM      reduce using rule 33 (command)
    T_INT           reduce using rule 33 (command)
    T_FLOAT         reduce using rule 33 (command)
    IF_STMT         reduce using rule 33 (command)
    FOR_STMT        reduce using rule 33 (command)
    OUTPUT_WRITE    reduce using rule 33 (command)
    OUTPUT_WRITELN  reduce using rule 33 (command)
    INPUT_READ      reduce using rule 33 (command)
    '('             reduce using rule 33 (command)
    '{'             reduce using rule 33 (command)
    '}'             reduce using rule 33 (command)
    '+'             reduce using rule 33 (command)
    '-'             reduce using rule 33 (command)
    '%'             reduce using rule 33 (command)
    '?'             reduce using rule 33 (command)
    '!'             reduce using rule 33 (command)


State 48

   14 var_declaration: unq_declaration • ';'

    ';'  shift, and go to state 191


State 49

   10 func_declaration: unq_declaration $@1 '(' parameters ')' '{' block_commands • '}' $@2

    '}'  shift, and go to state 85


State 50

   31 block_commands: command • block_commands
   32               | command •

    error           shift, and go to state 29
    NUM_INT         shift, and go to state 30
    NUM_FLOAT       shift, and go to state 31
    NIL_CNST        shift, and go to state 32
    ID              shift, and go to state 33
    RETURN_STM      shift, and go to state 34
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 35
    FOR_STMT        shift, and go to state 36
    OUTPUT_WRITE    shift, and go to state 37
    OUTPUT_WRITELN  shift, and go to state 38
    INPUT_READ      shift, and go to state 39
    '('             shift, and go to state 40
    '+'             shift, and go to state 41
    '-'             shift, and go to state 42
    '%'             shift, and go to state 43
    '?'             shift, and go to state 44
    '!'             shift, and go to state 45

    '{'  reduce using rule 40 ($@7)
    '}'  reduce using rule 32 (block_commands)

    func_calling      go to state 46
    var_declaration   go to state 47
    unq_declaration   go to state 48
    type              go to state 168
    type_lst          go to state 11
    type_number       go to state 12
    block_commands    go to state 86
    command           go to state 50
    $@7               go to state 51
    init_variable     go to state 52
    init_stmt         go to state 53
    conditional_stmt  go to state 54
    return_stmt       go to state 55
    iteration         go to state 56
    output            go to state 57
    input             go to state 58
    iden              go to state 59
    operation         go to state 60
    lst_binary        go to state 61
    arith_binary      go to state 62
    term              go to state 63
    expression        go to state 64
    const             go to state 65
    number            go to state 66
    single_operation  go to state 67
    arith_single      go to state 68
    lst_single        go to state 69


State 51

   41 command: $@7 • '{' block_commands '}'

    '{'  shift, and go to state 87


State 52

   34 command: init_variable •

    error           reduce using rule 34 (command)
    NUM_INT         reduce using rule 34 (command)
    NUM_FLOAT       reduce using rule 34 (command)
    NIL_CNST        reduce using rule 34 (command)
    ID              reduce using rule 34 (command)
    RETURN_STM      reduce using rule 34 (command)
    T_INT           reduce using rule 34 (command)
    T_FLOAT         reduce using rule 34 (command)
    IF_STMT         reduce using rule 34 (command)
    FOR_STMT        reduce using rule 34 (command)
    OUTPUT_WRITE    reduce using rule 34 (command)
    OUTPUT_WRITELN  reduce using rule 34 (command)
    INPUT_READ      reduce using rule 34 (command)
    '('             reduce using rule 34 (command)
    '{'             reduce using rule 34 (command)
    '}'             reduce using rule 34 (command)
    '+'             reduce using rule 34 (command)
    '-'             reduce using rule 34 (command)
    '%'             reduce using rule 34 (command)
    '?'             reduce using rule 34 (command)
    '!'             reduce using rule 34 (command)


State 53

   45 init_variable: init_stmt • ';'

    ';'  shift, and go to state 88


State 54

   35 command: conditional_stmt •

    error           reduce using rule 35 (command)
    NUM_INT         reduce using rule 35 (command)
    NUM_FLOAT       reduce using rule 35 (command)
    NIL_CNST        reduce using rule 35 (command)
    ID              reduce using rule 35 (command)
    RETURN_STM      reduce using rule 35 (command)
    T_INT           reduce using rule 35 (command)
    T_FLOAT         reduce using rule 35 (command)
    IF_STMT         reduce using rule 35 (command)
    FOR_STMT        reduce using rule 35 (command)
    OUTPUT_WRITE    reduce using rule 35 (command)
    OUTPUT_WRITELN  reduce using rule 35 (command)
    INPUT_READ      reduce using rule 35 (command)
    '('             reduce using rule 35 (command)
    '{'             reduce using rule 35 (command)
    '}'             reduce using rule 35 (command)
    '+'             reduce using rule 35 (command)
    '-'             reduce using rule 35 (command)
    '%'             reduce using rule 35 (command)
    '?'             reduce using rule 35 (command)
    '!'             reduce using rule 35 (command)


State 55

   36 command: return_stmt •

    error           reduce using rule 36 (command)
    NUM_INT         reduce using rule 36 (command)
    NUM_FLOAT       reduce using rule 36 (command)
    NIL_CNST        reduce using rule 36 (command)
    ID              reduce using rule 36 (command)
    RETURN_STM      reduce using rule 36 (command)
    T_INT           reduce using rule 36 (command)
    T_FLOAT         reduce using rule 36 (command)
    IF_STMT         reduce using rule 36 (command)
    FOR_STMT        reduce using rule 36 (command)
    OUTPUT_WRITE    reduce using rule 36 (command)
    OUTPUT_WRITELN  reduce using rule 36 (command)
    INPUT_READ      reduce using rule 36 (command)
    '('             reduce using rule 36 (command)
    '{'             reduce using rule 36 (command)
    '}'             reduce using rule 36 (command)
    '+'             reduce using rule 36 (command)
    '-'             reduce using rule 36 (command)
    '%'             reduce using rule 36 (command)
    '?'             reduce using rule 36 (command)
    '!'             reduce using rule 36 (command)


State 56

   37 command: iteration •

    error           reduce using rule 37 (command)
    NUM_INT         reduce using rule 37 (command)
    NUM_FLOAT       reduce using rule 37 (command)
    NIL_CNST        reduce using rule 37 (command)
    ID              reduce using rule 37 (command)
    RETURN_STM      reduce using rule 37 (command)
    T_INT           reduce using rule 37 (command)
    T_FLOAT         reduce using rule 37 (command)
    IF_STMT         reduce using rule 37 (command)
    FOR_STMT        reduce using rule 37 (command)
    OUTPUT_WRITE    reduce using rule 37 (command)
    OUTPUT_WRITELN  reduce using rule 37 (command)
    INPUT_READ      reduce using rule 37 (command)
    '('             reduce using rule 37 (command)
    '{'             reduce using rule 37 (command)
    '}'             reduce using rule 37 (command)
    '+'             reduce using rule 37 (command)
    '-'             reduce using rule 37 (command)
    '%'             reduce using rule 37 (command)
    '?'             reduce using rule 37 (command)
    '!'             reduce using rule 37 (command)


State 57

   38 command: output •

    error           reduce using rule 38 (command)
    NUM_INT         reduce using rule 38 (command)
    NUM_FLOAT       reduce using rule 38 (command)
    NIL_CNST        reduce using rule 38 (command)
    ID              reduce using rule 38 (command)
    RETURN_STM      reduce using rule 38 (command)
    T_INT           reduce using rule 38 (command)
    T_FLOAT         reduce using rule 38 (command)
    IF_STMT         reduce using rule 38 (command)
    FOR_STMT        reduce using rule 38 (command)
    OUTPUT_WRITE    reduce using rule 38 (command)
    OUTPUT_WRITELN  reduce using rule 38 (command)
    INPUT_READ      reduce using rule 38 (command)
    '('             reduce using rule 38 (command)
    '{'             reduce using rule 38 (command)
    '}'             reduce using rule 38 (command)
    '+'             reduce using rule 38 (command)
    '-'             reduce using rule 38 (command)
    '%'             reduce using rule 38 (command)
    '?'             reduce using rule 38 (command)
    '!'             reduce using rule 38 (command)


State 58

   39 command: input •
